--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Two Activities</string>
+    <string name="send_button_text">Send</string>
+    <string name="activity2_name">Second Activity</string>
+    <string name="message_received">Message Received</string>
 </resources>
