--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Two Activities</string>
     <string name="send_button_text">Send</string>
+    <string name="reply">Reply</string>
     <string name="activity2_name">Second Activity</string>
     <string name="message_received">Message Received</string>
+    <string name="enter_your_message_here">Enter Your Message Here</string>
+    <string name="enter_your_reply_here">Enter your reply here</string>
 </resources>
