--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="message_received">Message Received</string>
     <string name="enter_your_message_here">Enter Your Message Here</string>
     <string name="enter_your_reply_here">Enter your reply here</string>
+    <string name="text_header_reply">Reply Received</string>
 </resources>
